[FIX] /teamban not working
[FIX] RP_max<customteam>s unable to be set to 0
[FIX] Unable to drop custom shipment weapons
[FIX] Zombie move code(Thanks Enjia2000)
[FIX] Enhanced "players don't spawn in each other" code
[FIX] Zombies spawning in each other using the "players don't spawn in each other" code (a bit thanks to Enjia2000)
[FIX] Settings and globals not loading
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[CHANGE] Custom shipments without a team entered will make it so that every team can spawn the shipment
[CHANGE] Moved changelog part in init.lua to the changelog.txt file
[CHANGE] The way of saving settings and globals, it now doesn't use text files but SQL
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Every door and vehicle controls are put in the reload function of the keys SWEP
[ADD] Re-added the earthquake sound
[ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
[ADD] Cops chief and mayor only option in the Key menu for superadmins
[ADD] A very easy way to add classes! see shared.lua!
[ADD] rp_hungerspeed command: it's the speed of hunger divided by 10( standard = 7)
[ADD] Admins can choose to make a vote or not to make a vote to become cop/mayor
[ADD] The ability to make custom shipments