@@ -60,7 +60,7 @@ function SPropProtection.AdminPanel(Panel)
 	Panel:AddControl("CheckBox", {Label = "Use Protection On/Off", Command = "SPropProtection_use"})
 	Panel:AddControl("CheckBox", {Label = "Entity Damage Protection On/Off", Command = "SPropProtection_edmg"})	
 	Panel:AddControl("CheckBox", {Label = "Physgun Reload Protection On/Off", Command = "SPropProtection_pgr"})
-	Panel:AddControl("CheckBox", {Label = "Admins Can Touch World Props On/Off", Command = "SPropProtection_awp"})	
+	Panel:AddControl("CheckBox", {Label = "People can Touch World Props On/Off", Command = "SPropProtection_awp"})	
 	Panel:AddControl("CheckBox", {Label = "Disconnect Prop Deletion On/Off", Command = "SPropProtection_dpd"})
 	Panel:AddControl("CheckBox", {Label = "Delete Admin Entities On/Off", Command = "SPropProtection_dae"})
 	Panel:AddControl("Slider", {Label = "Deletion Delay in seconds", Command = "SPropProtection_delay", Type = "Integer", Min = "10", Max = "500"})
